@@ -43,7 +43,7 @@ namespace GLEW
             void GLEW_IncludePathAndStaticDefine(Opus.Core.IModule module, Opus.Core.Target target)
             {
                 C.ICCompilerOptions compilerOptions = module.Options as C.ICCompilerOptions;
-                compilerOptions.IncludePaths.Add(Opus.Core.State.PackageInfo["GLEW"], @"glew-1.5.7\include");
+                compilerOptions.IncludePaths.Add(this, @"glew-1.5.7\include");
                 compilerOptions.Defines.Add("GLEW_STATIC");
             }
         }
