@@ -330,7 +330,7 @@ namespace MingwCommon
 
             if (null != this.ObjectFilePath)
             {
-                directoriesToCreate.Add(System.IO.Path.GetDirectoryName(this.ObjectFilePath), false);
+                directoriesToCreate.AddAbsoluteDirectory(System.IO.Path.GetDirectoryName(this.ObjectFilePath), false);
             }
 
             return directoriesToCreate;
