@@ -122,7 +122,7 @@ namespace VisualCCommon
 
             if (null != this.LibraryFilePath)
             {
-                directoriesToCreate.Add(System.IO.Path.GetDirectoryName(this.LibraryFilePath), false);
+                directoriesToCreate.AddAbsoluteDirectory(System.IO.Path.GetDirectoryName(this.LibraryFilePath), false);
             }
 
             return directoriesToCreate;
