@@ -53,11 +53,11 @@ namespace WindowsSDK
             C.ILinkerOptions linkerOptions = module.Options as C.ILinkerOptions;
             if (target.Platform == Opus.Core.EPlatform.Win32)
             {
-                linkerOptions.LibraryPaths.Add(lib32Path, true);
+                linkerOptions.LibraryPaths.AddAbsoluteDirectory(lib32Path, true);
             }
             else if (target.Platform == Opus.Core.EPlatform.Win64)
             {
-                linkerOptions.LibraryPaths.Add(lib64Path, true);
+                linkerOptions.LibraryPaths.AddAbsoluteDirectory(lib64Path, true);
             }
             else
             {
@@ -69,7 +69,7 @@ namespace WindowsSDK
         void WindowsSDK_IncludePaths(Opus.Core.IModule module, Opus.Core.Target target)
         {
             C.ICCompilerOptions compilerOptions = module.Options as C.ICCompilerOptions;
-            compilerOptions.IncludePaths.Add(includePath, true);
+            compilerOptions.IncludePaths.AddAbsoluteDirectory(includePath, true);
         }
 
         public override Opus.Core.StringArray Libraries(Opus.Core.Target target)
